<resources>
    <string name="app_name">执法端</string>
    <string name="law_man">执法人员</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entity" />
    <string name="phone">手机号</string>
    <string name="hint">提示</string>
    <string name="input_phone">请输入用户名</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="input_number">输入编号</string>
    <string name="login_fail">登录失败</string>
    <string name="login_load">登录中</string>
    <string name="open_flash">打开手电筒</string>
    <string name="close_flash">关闭手电筒</string>
    <string name="about_us">关于携尔</string>
    <string name="hint_scan">对准二维码，自动扫描</string>
    <string name="scan">扫一扫</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="left_one">罚单记录</string>
    <string name="left_two">系统设置</string>
    <string name="left_three">联系客服</string>
    <string name="left_four">关于携尔</string>
    <string name="setting_one">检查更新</string>
    <string name="setting_two">清除缓存</string>
    <string name="exit">退出登录</string>
    <string name="exit_message">是否退出当前用户</string>
    <string name="ride_info">骑行人员信息</string>
    <string name="ride_case">违停原因</string>
    <string name="ride_place">违停地址</string>
    <string name="ride_number">单车编号</string>
    <string name="ride_company">运营企业</string>
    <string name="ride_person">运维人员</string>
    <string name="ticket_info">罚单信息</string>
    <string name="ticker_number">罚单编号</string>
    <string name="ticker_time">罚单时间</string>
    <string name="details">详情</string>
    <string name="details_info">*倡导声明：共享单车文明使用、遵规守法你我同行</string>
    <string name="law_record">执法记录</string>
    <string name="item_one">罚单编号</string>
    <string name="item_two">违章人</string>
    <string name="item_three">金额</string>
    <string name="item_four">时间</string>
    <string name="dialog_type">选择违规类型</string>
    <string name="penalty">罚款</string>
    <string name="car_number">单车编号：</string>
    <string name="car_man">违章人：</string>
    <string name="car_place">违停地址</string>
    <string name="car_type">违章类型：</string>
    <string name="car_money">罚款金额：</string>
    <string name="car_type_one">逆向行驶</string>
    <string name="penalty_s">待罚款：</string>
</resources>
