<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/text_f1f2f3">

        <TextView
            style="@style/item_text"
            android:layout_weight="1.2"
            android:text="@string/item_one"
            android:textColor="@color/text_383a4c"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_name"
            style="@style/item_text"
            android:layout_weight="0.6"
            android:text="@string/item_two"
            android:textColor="@color/text_383a4c"
            android:textSize="12sp" />

        <TextView
            style="@style/item_text"
            android:layout_weight="0.6"
            android:text="@string/item_three"
            android:textColor="@color/text_383a4c"
            android:textSize="12sp" />

        <TextView
            style="@style/item_text"
            android:text="@string/item_four"
            android:textColor="@color/text_383a4c"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>