<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xie.app.enforce.view.activity.PenaltyActivity">

    <include layout="@layout/action_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f1f2f3">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout style="@style/item_penalty_layout">

                <TextView
                    style="@style/item_penalty"
                    android:text="@string/car_number" />

                <TextView
                    style="@style/item_penalty"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="0000000"
                    android:textColor="@color/text_a9a9a9" />
            </RelativeLayout>

            <View
                style="@style/view_horizontal"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginStart="17dp"
                android:background="@color/text_e7e7e7" />

            <RelativeLayout style="@style/item_penalty_layout">

                <TextView
                    style="@style/item_penalty"
                    android:text="@string/car_man" />

                <TextView
                    style="@style/item_penalty"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="张三"
                    android:textColor="@color/text_a9a9a9" />
            </RelativeLayout>

            <View
                style="@style/view_horizontal"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginStart="17dp"
                android:background="@color/text_e7e7e7" />

            <RelativeLayout style="@style/item_penalty_layout">

                <TextView
                    style="@style/item_penalty"
                    android:text="@string/car_place" />

                <TextView
                    style="@style/item_penalty"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="高新区中瑞大厦附近"
                    android:textColor="@color/text_a9a9a9" />
            </RelativeLayout>

            <View
                style="@style/view_horizontal"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginStart="17dp"
                android:background="@color/text_e7e7e7" />

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/text_f1f2f3" />


            <RelativeLayout
                android:id="@+id/rl_penalty_select"
                style="@style/item_penalty_layout">

                <TextView
                    style="@style/item_penalty"
                    android:text="@string/car_type" />

                <TextView
                    style="@style/item_penalty"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:drawableEnd="@drawable/ic_right"
                    android:drawablePadding="6dp"
                    android:drawableRight="@drawable/ic_right"
                    android:text="@string/car_type_one"
                    android:textColor="@color/text_a9a9a9" />
            </RelativeLayout>

            <View
                style="@style/view_horizontal"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginStart="17dp"
                android:background="@color/text_e7e7e7" />

            <RelativeLayout style="@style/item_penalty_layout">

                <TextView
                    style="@style/item_penalty"
                    android:text="@string/car_money" />

                <TextView
                    style="@style/item_penalty"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="20元"
                    android:textColor="@color/text_a9a9a9" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:background="#fffbc9"
                android:gravity="center"
                android:text="@string/details_info"
                android:textColor="@color/text_565656"
                android:textSize="@dimen/sp_11" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="19dp"
                    android:layout_marginStart="19dp"
                    android:gravity="center"
                    android:text="@string/penalty_s"
                    android:textColor="#4a4a4a"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:gravity="center"
                    android:text="￥20.00"
                    android:textColor="#ff335e"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="108dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|end"
                    android:background="@color/text_3385ff"
                    android:gravity="center"
                    android:text="@string/ensure"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
