<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    >

    <include layout="@layout/action_bar" />

    <ImageView
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/entity"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="45dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingLeft="2dp"
            android:paddingRight="0dp"
            android:paddingStart="2dp"
            android:text="@string/phone"
            android:textColor="@color/text_383a4c"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_phone"
                android:maxLines="1"
                android:textColor="@color/text_383a4c"
                android:textColorHint="@color/text_999"
                android:textCursorDrawable="@drawable/shape_edit"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/img_clean_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/entity"
                android:src="@drawable/ic_nick_clear"
                android:visibility="invisible"
                tools:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

    <View
        style="@style/view_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingEnd="0dp"
            android:paddingLeft="2dp"
            android:paddingRight="0dp"
            android:paddingStart="2dp"
            android:text="@string/password"
            android:textColor="@color/text_383a4c"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/text_383a4c"
                android:textColorHint="@color/text_999"
                android:textCursorDrawable="@drawable/shape_edit"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/img_clean_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/entity"
                android:src="@drawable/ic_nick_clear"
                android:visibility="invisible"
                tools:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

    <View
        style="@style/view_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/btn_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/btn_selector_code"
        android:text="@string/login"
        android:textColor="@color/btn_code_text" />
</LinearLayout>
